# xorslp_ec

./: .gitignore  Cargo.toml  HOWTO_BENCHMARK_ISAL.md  LICENSE  README.md  bench_isal.c  our_amdpc_environment.txt  our_environments.txt  our_mac_environment.txt
reproducing/: README.md  full_optimized.sh  sec76_isal.sh  summarize_cache.rb  summarize_comp_compare.rb  summarize_memacc.rb  throughput_sec75.sh  throughput_sec75_1024blk.sh  throughput_sec76.sh  throughput_sec76_1024blk.sh  uncompressed_fusioned.sh
reproducing/rawlogs/: README.md
src/: bitmatrix.rs  comparison.rs  fast_repair.rs  field.rs  fin_field.rs  for_benchmark.rs  fusion.rs  lib.rs  main.rs  matrix.rs  optimize_slp.rs  renaming.rs  reorder.rs  reorder2.rs  repair.rs  rsv_bitmatrix.rs  run.modif.rs  run.orig.rs  run.rs  slp.rs  stat.rs  univariate_polynomial.rs  validation.rs  vandermonde.rs  vecteur.rs  xor.rs  xor64.rs  xor_repair.rs
